# bns-ext

./: .gitignore  Cargo.toml  Makefile  manifest.json
.cargo/: config.toml
src/: discovery.rs  helper.rs  interface.rs  lib.rs  metamask.rs  web3.rs
static/: .gitignore  README.md  bns.js  index.html  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
