[package]
name = "bns-ext"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]# you can check the latest version here: https://crates.io/crates/yewyew = "0.17"
yew = "0.19.0"
wasm-bindgen = {version = "0.2.67", features = ["serde-serialize"]}
js-sys = "0.3.44"
serde = "1.0"
serde_json = "1.0"
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = {version="0.4.29", features=["futures-core-03-stream"]}
web3 = {version="0.17.0", features = ["wasm", "eip-1193"], default-features = false}
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["http"] }
hex = "0.4.2"
wee_alloc = "0.4.5"
futures = "0.3.5"
anyhow = "1.0.52"
console_log = { version = "0.2", features = ["color"] }
log = "0.4"
jsonrpc_core = {version="18.0.0", package="jsonrpc-core"}
reqwest-wasm = "0.11.0"

[dependencies.bns-core]
path="../bns-node/bns-core"
default-features = false
features = ["wasm"]

[dependencies.web-sys]
version = "0.3.9"
features = [
  "MessageEvent",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcConfiguration",
  "RtcIceGatheringState"
]


[profile.dev]
opt-level = 1               # Use slightly better optimizations.
overflow-checks = true     # Disable integer overflow checks.

[profile.release]
opt-level = 3               # Use slightly better optimizations.
